--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+
+    implementation 'com.android.billingclient:billing:2.2.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
